syntax = "proto3";
package freemasonry.contract.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "contract/v1/params.proto";

option go_package = "freemasonry.cc/blockchain/x/contract/types";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

message GenesisState {
  
  Params params = 1 [ (gogoproto.nullable) = false ];
}